
- Added a block lower triangular preconditioner based (only) on the actions of
  each block, see class BlockLowerTriangularPreconditioner.

- Added an optional operator in LOBPCG to projects vectors onto a desired
  subspace (e.g. divergence-free). Other small changes in LOBPCG include the
  ability to set the starting vectors and support for relative tolerance.


Version 3.3, released on Jan 28, 2017
=====================================

FEM <-> linear system interface for action-only linear operators
----------------------------------------------------------------
- Added a new class, ConstrainedOperator, which can impose essential boundary
  conditions using only the action, Mult(), of a given square linear Operator.

- Added a FormLinearSystem + RecoverFEMSolution functionality for square linear
  Operators that are available only through their action. This includes all
  necessary transformations, such as: parallel assembly, conforming constraints
  for non-conforming AMR and eliminating boundary conditions. (Hybridization and
  static condensation are not supported.) See examples in miniapps/performance.

Matrix-free preconditioning and low-order-refined spaces
--------------------------------------------------------
- The HPC examples in miniapps/performance now support efficient preconditioning
  in matrix-free mode based on applying a standard (e.g. AMG) preconditioner to
  a sparsified version of the operator. The sparsification is obtained by
  rediscretizing with a low-order refined spaces, currently at the high-order
  degrees of freedom.

- New mesh constructors support the creation of low-order-refined version of a
  given mesh, both in serial and in parallel. These are illustrated in the HPC
  examples in miniapp/performance (option -pc lor), as well as in mesh-explorer
  miniapp, which now supports Gauss-Lobatto refinement and uniform refinement,
  both for any factor > 1.

Comprehensive PETSc and SUNDIALS interfaces